# evident-db

./: .gitignore  Makefile  NOTICE  README.md  build.gradle.kts  docker-compose.kafka.yml  docker-compose.redpanda.yml  gradle.properties  load-test.json  settings.gradle.kts
adapters/: build.gradle.kts
app/: build.gradle.kts
build-logic/: settings.gradle.kts
build-logic/kapt/: build.gradle.kts
build-logic/kotlin/: build.gradle.kts
build-logic/micronaut-app/: build.gradle.kts
build-logic/micronaut-lib/: build.gradle.kts
build-logic/protobuf/: build.gradle.kts
client/: README.md  build.gradle.kts
clients/: settings.gradle.kts
clients/java/: README.md  build.gradle.kts
clients/jvm/: build.gradle.kts  settings.gradle.kts
clojure-repl/: build.gradle
cloudevents/: build.gradle.kts
domain/: build.gradle.kts
examples/: settings.gradle.kts
examples/autonomo/: .editorconfig  build.gradle.kts  micronaut-cli.yml  scratch.kt
examples/clojure-repl/: .gitignore  build.gradle
examples/simulation-test/: .gitignore  README.md  build.gradle.kts  (+2 more)
interface/: domain.proto  service.proto
kafka/: build.gradle.kts
old-server/: gradle.properties  micronaut-cli.yml
perf/: Cargo.toml  README.md  build.rs
perf/src/: perf.rs
proto/: domain.proto  server.proto  service.proto  spec.proto  types.proto
read-models/: build.gradle.kts
server/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
service/: build.gradle.kts
test/: build.gradle.kts
transactor/: build.gradle.kts  micronaut-cli.yml
util/: build.gradle.kts
(+320 files in other folders)
