[package]
name = "evidentdb-perf"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "evidentdb-perf"
path = "src/perf.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
prost-types = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7"
