[package]
name = "evidentdb-perf"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "evidentdb-perf"
path = "src/perf.rs"

[dependencies]
cloudevents-sdk = "0.5"
prost = "0.10"
prost-types = "0.10"
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.7"
url = { version = "^2.1", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.7"
